<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="8dp"
    tools:context=".ui.HomeFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tlOptionsTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tiWorkTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_title1"
            />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tiBreakTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_title2" />
    </com.google.android.material.tabs.TabLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlOptionsTime">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_circle"
            android:contentDescription="@string/fondo_temp"/>
        <ProgressBar
            android:id="@+id/pbCircle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:indeterminateOnly="false"
            android:progressDrawable="@drawable/progress_bar" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/default_time"
            android:textSize="32sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnParar"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/btn_parar"
            app:cornerRadius="100dp"
            android:visibility="gone"
            />
        <View
            android:layout_width="8dp"
            android:layout_height="0dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIniciar"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/btn_iniciar"
            app:cornerRadius="100dp"
            />
        <View
            android:layout_width="8dp"
            android:layout_height="0dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPausar"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/btn_pausar"
            app:cornerRadius="100dp"
            android:visibility="gone"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinuar"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/btn_continuar"
            app:cornerRadius="100dp"
            android:visibility="gone"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>